<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nibok</string>

    <!-- Accessibility content description -->
    <string name="book_cover_description">Picture of the book\'s cover</string>
    <string name="save_button_description">Save this book to your Saved collection</string>
    <string name="detail_image_description">Main image of the book</string>
    <string name="take_picture_button_description">Tap button to take a picture</string>
    <string name="picture_button_description">Image of the book you took. Tap to show options</string>
    <string name="description_nibok_logo">Nibok logo</string>

    <!-- Main ViewPager Tabs names -->
    <string name="main_tab_new">New</string>
    <string name="main_tab_saved">Saved</string>
    <string name="main_tab_published">My insertions</string>
    <string name="main_tab_messages">Messages</string>

    <!-- Toasts -->
    <string name="book_saved_to_collection">Book saved to your collection</string>
    <string name="book_removed_from_collection">Book removed from your collection</string>
    <string name="book_reinserted_into_collection">Book reinserted into your collection</string>
    <string name="book_reinsert_error">Error while restoring bookmark</string>
    <string name="book_already_into_collection">Book is already into your collection</string>
    <string name="no_newer_book_insertions">No newer book insertions found</string>
    <string name="no_newer_messages">No newer messages found</string>
    <string name="end_reached">You have reached the end</string>

    <!-- Main Toolbar menu actions -->
    <string name="search_action">Search</string>
    <string name="refresh_action">Refresh</string>
    <string name="back_to_top_action">Go back to top</string>
    <string name="settings_action">Settings</string>

    <!-- Book detail view -->
    <string name="insertion_details">Insertion details</string>
    <string name="insertion_book_price">Price</string>
    <string name="insertion_book_condition">Book condition</string>
    <string name="insertion_sold_by">Sold by</string>
    <string name="insertion_date">Insertion date</string>
    <string name="book_details">Book details</string>
    <string name="book_title">Title</string>
    <string name="book_year">Publishing Year</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_isbn">ISBN</string>
    <plurals name="book_author">
        <item quantity="one">Author</item>
        <item quantity="other">Authors</item>
    </plurals>

    <!-- Buttons -->
    <string name="snackbar_undo_action">UNDO</string>
    <string name="delete_insertion">Delete insertion</string>


    <!-- Extra -->

    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="yesterday">Yesterday</string>

    <!-- Hints -->
    <string name="search_hint_book">Search by title, author, ISBN…</string>
    <string name="search_hint_message">Search messages…</string>
    <string name="search_hint_no_insertions">No insertions found corresponding to: \'%1s\'</string>
    <string name="search_hint_no_saved_insertions">No saved insertions found corresponding to: \'%1s\'</string>
    <string name="search_hint_no_published_insertions">No published insertions found corresponding to: \'%1s\'</string>
    <string name="search_hint_no_conversations">No messages found corresponding to: \'%1s\'</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <!-- Errors -->
    <string name="error_generic">Error</string>
    <string name="error_input_isbn">Enter the 13 digits number found on the back of the book</string>
    <string name="error_invalid_isbn">Invalid ISBN.\nISBN codes look like 97# - ##########</string>
    <string name="error_message_not_sent">"Could not send message, try again later"</string>
    <string name="error_invalid_seller_messaging">"Cannot send a message to this user"</string>
    <string name="error_username_too_short" tools:ignore="PluralsCandidate">Username must contain at least %1d characters</string>
    <string name="error_password_too_short" tools:ignore="PluralsCandidate">Password must contain at least %1d characters</string>
    <string name="error_password_do_not_match">Passwords must be the same</string>
    <string name="error_conversation_not_started">Cannot send a message to this user</string>
    <string name="error_take_picture">Cannot take picture</string>
    <string name="error_required_title">Title is required</string>
    <string name="error_required_authors">At least one author is required</string>
    <string name="error_required_year">Publishing year is required</string>
    <string name="error_required_publisher">Publisher is required</string>
    <string name="error_required_price">Price is required</string>
    <string name="error_future_year">Publishing year must be in the past</string>
    <string name="error_unknown_menu_action">Unknown action</string>
    <string name="error_could_not_add_bookmark">"Could not add bookmark"</string>
    <string name="error_could_not_remove_bookmark">"Could not remove bookmark"</string>

    <!-- Placeholders -->
    <string name="placeholder_no_info">Information not available</string>
    <string name="placeholder_author_plural">Author</string>
    <string name="placeholder_book_detail">Book details</string>
    <string name="title_activity_publish">Publish Insertion</string>
    <string name="placeholder_chat_partner">Unknown user</string>
    <string name="placeholder_chat">Chat</string>

    <!-- Insertion publishing -->
    <string name="book_authors">Authors (comma separated)</string>
    <string name="next">Next</string>
    <string name="change_book_details">Change book details</string>
    <string name="helper_insertion_details">Set price and select book condition</string>
    <string name="change_isbn">Change ISBN</string>
    <string name="review_book_details">Review the book\'s details</string>
    <string name="skip">Skip</string>
    <string name="helper_isbn_input">Insert the ISBN code of the book</string>
    <string name="add_book_details">Add book\'s details</string>
    <string name="book_wear_condition">Wear</string>
    <string name="helper_insertion_pictures">Take some pictures of the book</string>
    <string name="publish_insertion">Sell</string>
    <string name="change_insertion_details">Change price</string>
    <string name="take_picture">Take picture</string>
    <string name="helper_review_insertion_data">Review your insertion before publishing</string>
    <string name="go_back">Go back</string>
    <string name="btn_publish">Publish</string>
    <string name="dialog_delete_pic_title">Delete this picture?</string>
    <string name="dialog_delete_pic_content">Are you sure you want to delete this picture?</string>
    <string name="dialog_delete_pic_positive">Delete</string>

    <!-- Book wear conditions -->
    <string-array name="book_wear_condition_array">
        <item>Never used</item>
        <item>Light wear</item>
        <item>Medium wear</item>
        <item>Heavy wear</item>
    </string-array>

    <!-- Publish Dialogs -->
    <string name="progress_publishing">Publishing…</string>
    <string name="progress_get_book_info">Retrieving book info…</string>
    <string name="alert_publish_title">Publish insertion</string>
    <string name="alert_publish_content_question">Publish the following book insertion?</string>
    <string name="alert_publish_positive_text">Publish</string>
    <string name="alert_quit_publish_title">Quit insertion publishing?</string>
    <string name="alert_quit_publish_content">Insertion data will be lost on quit.\nProceed?</string>
    <string name="alert_quit_publish_positive_text">Quit</string>
    <string name="text_cancel">Cancel</string>
    <string name="hint_message_input">Message</string>
    <string name="publish_insertion_success_title">Insertion Published</string>
    <string name="publish_insertion_success_content">The insertion was successfully published</string>
    <string name="publish_insertion_success_quit">Quit publishing</string>
    <string name="publish_insertion_error_title">Insertion Publishing Failed</string>
    <string name="publish_insertion_error_content">The insertion could not be published.\nTry again later</string>
    <string name="publish_insertion_incomplete_error_content">Insertion data is incomplete and cannot be published</string>
    <string name="publish_insertion_already_published_error_content">Your insertion was already published</string>
    <string name="dialog_title_book_info_not_found">No info on this book</string>
    <string name="dialog_content_book_info_not_found">No book data associated with this ISBN was found.\nYou can still input data manually</string>
    <string name="str_continue">Continue</string>

    <!-- Chat -->
    <string name="partner_reply">%1s has replied</string>
    <string name="chat_title">Chat with %1s</string>
    <string name="profile_image_of_the_message_receiver">Profile image of the message receiver</string>

    <!-- Authentication -->
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="link_login">Already a member? Login here</string>
    <string name="link_sign_up">Not a member yet? Register here</string>
    <string name="login_action">Login</string>
    <string name="logout_action">Logout</string>
    <string name="username_already_taken">This username is already taken</string>

    <!-- Authentication dialogs -->
    <string name="title_login_fail">Login Failed</string>
    <string name="content_login_fail">Check your username and password and try again</string>
    <string name="title_sign_up_fail">Sign Up Failed</string>
    <string name="content_sign_up_fail">Try again later</string>

    <!-- Delete dialogs -->
    <string name="title_delete_insertion">Delete insertion?</string>
    <string name="content_delete_insertion">Do you really want to delete this insertion?\nThis cannot be undone</string>
    <string name="positive_delete">Delete</string>
    <string name="title_delete_success">Insertion deleted</string>
    <string name="content_delete_success">Your insertion was deleted successfully</string>
    <string name="title_delete_fail">Error while deleting insertion</string>
    <string name="content_delete_fail">Your insertion could not be deleted.\nTry again later.</string>
    <string name="placeholder_text_feed">Feed</string>
    <string name="placeholder_sub_feed">Refresh the feed to view the latest insertions</string>
    <string name="placeholder_text_bookmark">Saved Insertions</string>
    <string name="placeholder_sub_bookmark">Tap the bookmark icon to save an insertions</string>
    <string name="placeholder_text_published">My Insertions</string>
    <string name="placeholder_sub_published">Tap the button to publish an insertion</string>
    <string name="placeholder_text_conversation">Messages</string>
    <string name="placeholder_sub_conversation">Contact a seller to start a conversation</string>

</resources>
