<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputBookDetailsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:visibility="gone"
    tools:showIn="@layout/fragment_publish">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/publish_header_distance" />

        <TextView
            android:id="@+id/helperBookDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add_book_details"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputBookTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputBookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="60"
                android:singleLine="true"
                android:hint="@string/book_title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputBookAuthorsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputBookAuthors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="60"
                android:singleLine="true"
                android:hint="@string/book_authors" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputBookYearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputBookYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:singleLine="true"
                android:inputType="number"
                android:hint="@string/book_year" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputBookPublisherLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputBookPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="60"
                android:singleLine="true"
                android:hint="@string/book_publisher" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_gravity="end">

            <Button
                android:id="@+id/btnChangeISBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_isbn" />


            <Button
                android:id="@+id/btnConfirmBookDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:theme="@style/positiveButton"
                android:text="@string/next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/publish_footer_distance" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>