<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputInsertionDetailsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:visibility="gone"
    tools:showIn="@layout/fragment_publish">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/publish_header_distance" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/helper_insertion_details"
            android:textSize="20sp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputInsertionBookPriceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputInsertionBookPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="60"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:hint="@string/insertion_book_price" />
        </android.support.design.widget.TextInputLayout>

        <!-- Text and spinner with underline -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/helperInsertionBookWear"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:text="@string/book_wear_condition" />

            <Spinner
                android:id="@+id/inputInsertionBookCondition"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <View
            style="@style/horizontal_detail_divider"
            android:layout_height="1.3dp"
            android:layout_marginTop="1.75dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/text_input_color" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="22dp"
            android:layout_gravity="end">

            <Button
                android:id="@+id/btnChangeBookDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_book_details" />


            <Button
                android:id="@+id/btnConfirmInsertionDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:theme="@style/positiveButton"
                android:text="@string/next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/publish_footer_distance" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>