<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nibokapp.nibok.ui.activity.LoginActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/authFormContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:visibility="visible"
        android:background="@color/primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/publish_header_distance" />

            <!-- Logo -->

            <ImageView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_nibok_logo"
                android:src="@drawable/nibok_logo" />

            <!-- Username -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputUsernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/WhiteTextInput"
                android:hint="@string/hint_username">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="25"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <!-- Primary Password -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPasswordPrimaryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/WhiteTextInput"
                android:hint="@string/hint_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputPasswordPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="25"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <!-- Secondary Password. Used for sign up -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPasswordSecondaryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/WhiteTextInput"
                android:hint="@string/hint_confirm_password"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputPasswordSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="25"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <!-- Authenticate button. Either Login or Sign up -->

            <Button
                android:id="@+id/btnAuthenticate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:theme="@style/positiveButton"
                android:textSize="18sp"
                android:text="@string/login" />

            <!-- Link to other option (login or sign up) -->

            <TextView
                android:id="@+id/alternativeLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="@string/link_sign_up" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/publish_footer_distance" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
