<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputISBNContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:visibility="gone"
    tools:showIn="@layout/fragment_publish_insertion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/publish_header_distance" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/helper_isbn_input"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputISBNLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputISBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="13"
                android:singleLine="true"
                android:inputType="number"
                android:hint="@string/book_isbn" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSkipISBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/skip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/publish_footer_distance" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>